# geometricjax_experimental

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml
.github/workflows/: release.yml  run_tests.yml
geometricjax_experimental/: pg.py
tests/: basic_test.py
