[project]
name = "geometricjax_experimental"
version = "0.1.0"
description = "basic tests for full geometricjax library"
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "samir539", email = "github.emails.13@gmail.com"},
]
keywords = ["jax", "neural-networks", "deep-learning"]

urls = {repository = "https://github.com/samir539/geometricjax_experimental" }
dependencies = ["jax>=0.4.13,!=0.4.27", "jaxtyping>=0.2.20", "typing_extensions>=4.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["geometricjax_experimental/*"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=geometricjax_experimental,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
reportFunctionMemberAccess = false
include = ["geometricjax_experimental", "tests"]